--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Dylan-Gresham/Personal-Portfolio/issues"
   },
-  "homepage": "https://github.com/Dylan-Gresham/Personal-Portfolio#readme"
+  "homepage": "https://github.com/Dylan-Gresham/Personal-Portfolio#readme",
+  "devDependencies": {
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  }
 }
