--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Personal Portfolio for myself",
   "main": "main.js",
   "scripts": {
+    "build": "webpack",
+    "start": "webpack serve --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +19,11 @@
   },
   "homepage": "https://github.com/Dylan-Gresham/Personal-Portfolio#readme",
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
